external-projects/sui-prover/crates/sui-prover/tests/snapshots/quantifiers/filter.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/filter.fail.move:57:5
   │
57 │     ensures(vector::contains(tens, &20)); // EXPECTED FAILURE
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/filter.fail.move:53: test_element_not_matching_predicate

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/filter.fail.move:27:5
   │
27 │     ensures(vector::length(tens) == 3); // EXPECTED FAILURE
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/filter.fail.move:23: test_wrong_count

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/filter.fail.move:37:5
   │
37 │     ensures(*vector::borrow(tens, 0) == 20); // EXPECTED FAILURE
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/filter.fail.move:33: test_wrong_element

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/filter.fail.move:47:5
   │
47 │     ensures(*vector::borrow(evens, 1) == 30); // EXPECTED FAILURE (should be 20)
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/filter.fail.move:43: test_wrong_order

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/filter.fail.move:67:5
   │
67 │     ensures(vector::length(evens) == 2); // EXPECTED FAILURE
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/filter.fail.move:63: test_wrong_predicate
